# cpp26-examples

./: CMakeLists.txt  README.md
01_embed/: CMakeLists.txt
02_reflection/: CMakeLists.txt
03_pattern_matching/: CMakeLists.txt
04_multidim_subscripts/: CMakeLists.txt
05_ranges/: CMakeLists.txt
06_contracts/: CMakeLists.txt
